@@ -32,6 +32,7 @@ S3method("nclones", "list")
 S3method("dclone", "dcdim")
 S3method("dclone", "default")
 S3method("dclone", "list")
+S3method("dclone", "environment")
 S3method("dctable", "default")
 S3method("extractdctable", "default")
 S3method("dcdiag", "default")
