@@ -16,6 +16,9 @@ Version 1.3-5, August 23, 2011
       not user visible and undocumented.
     * dclone is loaded to workers by snowWrapper
       only if .packages() does not contain it yet.
+    * data argument can be environment,
+      it is coerced to a list for handling n.clones attribute.
+    * dclone method for environmet added: it returns a cloned list.
 
 Version 1.3-4, July 9, 2011
     * dc.fit: updating fixed (only updated after 2nd iteration).
